--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>smhrd</title><script defer="defer" src="js/chunk-vendors.5e221ae7.js"></script><script defer="defer" src="js/app.f72a3f08.js"></script><link href="css/app.73ecbfd2.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but smhrd doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="favicon.ico">
+    <title>smhrd</title>
+  <script defer src="js/chunk-vendors.js"></script><script defer src="js/app.js"></script></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but smhrd doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
